--- a/generalStore/Views/Shared/_Layout.cshtml
+++ b/generalStore/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-dark px-2" href="">
+                    <a class="text-dark px-2" href="/Admin">    
                         <i class="fab fa-facebook-f"></i>
                     </a>
                     <a class="text-dark px-2" href="">
