--- a/generalStore/Views/ShoppingCart/Index.cshtml
+++ b/generalStore/Views/ShoppingCart/Index.cshtml
@@ -43,7 +43,7 @@
                                                 <i class="fa fa-minus"></i>
                                             </button>
                                         </div>
-                                        <input data-mahh="@item.Product.ProductId" type="text" class="cartItem form-control form-control-sm bg-secondary text-center" value="@item.amount">
+                                        <input data-mahh="@item.Product.ProductId" type="number" class="cartItem form-control form-control-sm bg-secondary text-center" value="@item.amount">
                                         <div class="input-group-btn">
                                             <button @*data-mahh="@item.Product.ProductId" value="@item.amount"*@ class="btn btn-sm btn-primary btn-plus">
                                                 <i class="fa fa-plus"></i>
