--- a/generalStore/Areas/Admin/Views/AdminCustomers/Details.cshtml
+++ b/generalStore/Areas/Admin/Views/AdminCustomers/Details.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Avatar)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.Addres)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
+            @Html.DisplayFor(model => model.Addres)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
