--- a/generalStore/Areas/Admin/Views/Shared/_SidebarStart.cshtml
+++ b/generalStore/Areas/Admin/Views/Shared/_SidebarStart.cshtml
@@ -1,48 +1,46 @@
 ﻿
-   <nav class="navbar bg-light navbar-light">
-        <a href="index.html" class="navbar-brand mx-4 mb-3">
-            <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>TStore</h3>
-        </a>
-        <div class="d-flex align-items-center ms-4 mb-4">
-            <div class="position-relative">
-                <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
-            </div>
-            <div class="ms-3">
-                <h6 class="mb-0">Jhon Doe</h6>
-                <span>Admin</span>
+<nav class="navbar bg-light navbar-light">
+    <a href="index.html" class="navbar-brand mx-4 mb-3">
+        <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>TStore</h3>
+    </a>
+    <div class="d-flex align-items-center ms-4 mb-4">
+        <div class="position-relative">
+            <img class="rounded-circle" src="/img/user.jpg" alt="" style="width: 40px; height: 40px;">
+            <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
+        </div>
+        <div class="ms-3">
+            <h6 class="mb-0">Trong Tan</h6>
+            <span>Admin</span>
+        </div>
+    </div>
+    <div class="navbar-nav w-100">
+        <a href="/" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+        <div class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Quản lý đơn hàng</a>
+            <div class="dropdown-menu bg-transparent border-0">
+                <a href="button.html" class="dropdown-item">Buttons</a>
+                <a href="typography.html" class="dropdown-item">Typography</a>
+                <a href="element.html" class="dropdown-item">Other Elements</a>
             </div>
         </div>
-        <div class="navbar-nav w-100">
-            <a href="/" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Quản lý đơn hàng</a>
-                <div class="dropdown-menu bg-transparent border-0">
-                    <a href="button.html" class="dropdown-item">Buttons</a>
-                    <a href="typography.html" class="dropdown-item">Typography</a>
-                    <a href="element.html" class="dropdown-item">Other Elements</a>
-                </div>
-            </div>
-            <a asp-area="Admin" asp-controller="AdminProducts" asp-action="Index" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Quản lý sản phẩm</a>
-            <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Quản lý khác hàng</a>
-            <a asp-area="Admin" asp-controller="AdminCategories" asp-action="Index" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Quản lý loại sản phẩm</a>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Quản lý hệ thống</a>
-                <div class="dropdown-menu bg-transparent border-0">
-                    <a asp-area="Admin" asp-controller="AdminAccounts" asp-action="Index" class="dropdown-item">Quản lý quyền tài khoản</a>
-                    <a asp-area="Admin" asp-controller="AdminRoles" asp-action="Index" class="dropdown-item">Quản lý quyền truy cập</a>
-                </div>
-            </div>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Quảng lý Shipper</a>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
-                <div class="dropdown-menu bg-transparent border-0">
-                    <a href="signin.html" class="dropdown-item">Sign In</a>
-                    <a href="signup.html" class="dropdown-item">Sign Up</a>
-                    <a href="404.html" class="dropdown-item">404 Error</a>
-                    <a href="blank.html" class="dropdown-item">Blank Page</a>
-                </div>
+        <a asp-area="Admin" asp-controller="AdminProducts" asp-action="Index" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Quản lý sản phẩm</a>
+        <a asp-area="Admin" asp-controller="AdminCustomers" asp-action="Index" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Quản lý khác hàng</a>
+        <a asp-area="Admin" asp-controller="AdminCategories" asp-action="Index" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Quản lý loại sản phẩm</a>
+        <div class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Quản lý hệ thống</a>
+            <div class="dropdown-menu bg-transparent border-0">
+                <a asp-area="Admin" asp-controller="AdminAccounts" asp-action="Index" class="dropdown-item">Quản lý quyền tài khoản</a>
+                <a asp-area="Admin" asp-controller="AdminRoles" asp-action="Index" class="dropdown-item">Quản lý quyền truy cập</a>
             </div>
         </div>
-    </nav>
+        <div class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Quản lý thành phần</a>
+            <div class="dropdown-menu bg-transparent border-0">
+                <a asp-area="Admin" asp-controller="AdminColors" asp-action="Index" class="dropdown-item">Quản lý colors</a>
+                <a asp-area="Admin" asp-controller="AdminSizes" asp-action="Index" class="dropdown-item">Quản lý sizes</a>
+            </div>
+        </div>
+        <a asp-area="Admin" asp-controller="AdminPages" asp-action="Index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Quảng lý Pages</a>
+    </div>
+</nav>
 </div>
