--- a/generalStore/Areas/Admin/Views/_ViewImports.cshtml
+++ b/generalStore/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using generalStore
 @using generalStore.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, PagedList.Core.Mvc
